[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Players/Jump3.png" type="Texture" id=1]
[ext_resource path="res://Player/Coyote3.gd" type="Script" id=2]
[ext_resource path="res://Player/Jumping3.gd" type="Script" id=3]
[ext_resource path="res://StateMachine/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://Player/Moving3.gd" type="Script" id=5]
[ext_resource path="res://Player/Idle3.gd" type="Script" id=6]
[ext_resource path="res://Player/Falling3.gd" type="Script" id=7]
[ext_resource path="res://Player/Moving_and_Jumping3.gd" type="Script" id=8]
[ext_resource path="res://Player/Player.gd" type="Script" id=9]
[ext_resource path="res://Assets/Players/Character.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 22 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 38 ) ],
"loop": false,
"name": "WallJump",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Attacking",
"speed": 5.0
}, {
"frames": [ SubResource( 41 ), SubResource( 42 ) ],
"loop": false,
"name": "Falling",
"speed": 5.0
}, {
"frames": [ SubResource( 39 ), SubResource( 26 ), SubResource( 40 ), SubResource( 27 ) ],
"loop": true,
"name": "Moving",
"speed": 5.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ) ],
"loop": false,
"name": "Jumping",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 9.5, 31 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 3, 0 )
frames = SubResource( 15 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -1 )
shape = SubResource( 16 )

[node name="Floor" type="Node2D" parent="."]
position = Vector2( 0, 15 )

[node name="Left" type="RayCast2D" parent="Floor"]
position = Vector2( -8, 13 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 30

[node name="Center" type="RayCast2D" parent="Floor"]
position = Vector2( 0, 13 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 30

[node name="Right" type="RayCast2D" parent="Floor"]
position = Vector2( 8, 13 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 2147483678

[node name="Wall" type="Node2D" parent="."]

[node name="Left" type="RayCast2D" parent="Wall"]
position = Vector2( -9, 0 )
enabled = true
cast_to = Vector2( -5, 0 )
collision_mask = 30
collide_with_areas = true

[node name="Right" type="RayCast2D" parent="Wall"]
position = Vector2( 10, 0 )
enabled = true
cast_to = Vector2( 5, 0 )
collision_mask = 30
collide_with_areas = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Idle3" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Moving3" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Jumping3" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Moving_and_Jumping3" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Falling3" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Coyote3" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="StateMachine/Coyote3"]
wait_time = 0.2
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="timeout" from="StateMachine/Coyote3/Timer" to="StateMachine/Coyote3" method="_on_Timer_timeout"]
